--- a/app/blocks/_work.html
+++ b/app/blocks/_work.html
@@ -1,10 +1,6 @@
 <section class="section work">
     <div class="container">
-            <ul class="tabs__list">
-                <li class="tabs__item">Brand design</li>
-                <li class="tabs__item">Digital design</li>
-            </ul>
-
+        <h2 class="work__title">Work</h2>
         <ul class="work__list">
             <li class="work__item">
                 <div class="work__wrap">
@@ -179,415 +175,7 @@
                     </li>
                 </ul>
             </li>
-
-            <li class="work__item">
-                <div class="work__wrap">
-                    <picture class="picture">
-                        <source
-                                media="(min-width: 600px)"
-                                srcset="../img/work-7-desck.jpg, ../img/work-7-desck@2x.jpg 1.25x"
-                        />
-                        <img class="work__img" src="../img/work-7.jpg" alt="work 7">
-                    </picture>
-                </div>
-                <h3 class="work__item-title">
-                    Ribas hotel group
-                </h3>
-                <ul class="category__list">
-                    <li class="category__item">
-                        <a href="#" class="category__link">brand strategy /</a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity / </a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity / </a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity</a>
-                    </li>
-                </ul>
-            </li>
-
-            <li class="work__item">
-                <div class="work__wrap">
-                    <picture class="picture">
-                        <source
-                                media="(min-width: 600px)"
-                                srcset="../img/work-3-desck.jpg, ../img/work-3-desck@2x.jpg 1.25x"
-                        />
-                        <img class="work__img" src="../img/work-3.jpg" alt="work 2">
-                    </picture>
-                </div>
-                <h3 class="work__item-title">
-                    Ribas hotel group
-                </h3>
-                <ul class="category__list">
-                    <li class="category__item">
-                        <a href="#" class="category__link">brand strategy /</a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity / </a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity / </a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity</a>
-                    </li>
-                </ul>
-            </li>
-
-            <li class="work__item">
-                <div class="work__wrap">
-                    <picture class="picture">
-                        <source
-                                media="(min-width: 600px)"
-                                srcset="../img/work-5-desck.jpg, ../img/work-5-desck@2x.jpg 1.25x"
-                        />
-                        <img class="work__img" src="../img/work-5.jpg" alt="work 5">
-                    </picture>
-                </div>
-                <h3 class="work__item-title">
-                    Ribas hotel group
-                </h3>
-                <ul class="category__list">
-                    <li class="category__item">
-                        <a href="#" class="category__link">brand strategy /</a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity / </a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity / </a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity</a>
-                    </li>
-                </ul>
-            </li>
-
-            <li class="work__item">
-                <div class="work__wrap">
-                    <picture class="picture">
-                        <source
-                                media="(min-width: 600px)"
-                                srcset="../img/work-6-desck.jpg, ../img/work-6-desck@2x.jpg 1.25x"
-                        />
-                        <img class="work__img" src="../img/work-6.jpg" alt="work 6">
-                    </picture>
-                </div>
-                <h3 class="work__item-title">
-                    Akvarel building company
-                </h3>
-                <ul class="category__list">
-                    <li class="category__item">
-                        <a href="#" class="category__link">brand strategy /</a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity / </a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity / </a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity</a>
-                    </li>
-                </ul>
-            </li>
         </ul>
-        <ul class="work__list">
-
-            <li class="work__item">
-                <div class="work__wrap">
-                    <picture class="picture">
-                        <source
-                                media="(min-width: 600px)"
-                                srcset="../img/work-6-desck.jpg, ../img/work-6-desck@2x.jpg 1.25x"
-                        />
-                        <img class="work__img" src="../img/work-6.jpg" alt="work 6">
-                    </picture>
-                </div>
-                <h3 class="work__item-title">
-                    Akvarel building company
-                </h3>
-                <ul class="category__list">
-                    <li class="category__item">
-                        <a href="#" class="category__link">brand strategy /</a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity / </a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity / </a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity</a>
-                    </li>
-                </ul>
-            </li>
-
-            <li class="work__item">
-                <div class="work__wrap">
-                    <picture class="picture">
-                        <source
-                                media="(min-width: 600px)"
-                                srcset="../img/work-7-desck.jpg, ../img/work-7-desck@2x.jpg 1.25x"
-                        />
-                        <img class="work__img" src="../img/work-7.jpg" alt="work 7">
-                    </picture>
-                </div>
-                <h3 class="work__item-title">
-                    Ribas hotel group
-                </h3>
-                <ul class="category__list">
-                    <li class="category__item">
-                        <a href="#" class="category__link">brand strategy /</a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity / </a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity / </a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity</a>
-                    </li>
-                </ul>
-            </li>
-
-            <li class="work__item">
-                <div class="work__wrap">
-                    <picture class="picture">
-                        <source
-                                media="(min-width: 600px)"
-                                srcset="../img/work-3-desck.jpg, ../img/work-3-desck@2x.jpg 1.25x"
-                        />
-                        <img class="work__img" src="../img/work-3.jpg" alt="work 2">
-                    </picture>
-                </div>
-                <h3 class="work__item-title">
-                    Ribas hotel group
-                </h3>
-                <ul class="category__list">
-                    <li class="category__item">
-                        <a href="#" class="category__link">brand strategy /</a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity / </a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity / </a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity</a>
-                    </li>
-                </ul>
-            </li>
-
-            <li class="work__item">
-                <div class="work__wrap">
-                    <picture class="picture">
-                        <source
-                                media="(min-width: 600px)"
-                                srcset="../img/work-1-desck.jpg, ../img/work-1-desck@2x.jpg 1.25x"
-                        />
-                        <img class="work__img" src="../img/work-1.jpg" alt="work 1">
-                    </picture>
-                </div>
-                <h3 class="work__item-title">
-                    Ribas hotel group
-                </h3>
-                <ul class="category__list">
-                    <li class="category__item">
-                        <a href="#" class="category__link">brand strategy /</a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity / </a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity / </a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity</a>
-                    </li>
-                </ul>
-            </li>
-
-            <li class="work__item">
-                <div class="work__wrap">
-                    <picture class="picture">
-                        <source
-                                media="(min-width: 600px)"
-                                srcset="../img/work-2-desck.jpg, ../img/work-2-desck@2x.jpg 1.25x"
-                        />
-                        <img class="work__img" src="../img/work-2.jpg" alt="work 2">
-                    </picture>
-                </div>
-                <h3 class="work__item-title">
-                    Vilki Palki
-                </h3>
-                <ul class="category__list">
-                    <li class="category__item">
-                        <a href="#" class="category__link">brand strategy /</a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity / </a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity / </a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity</a>
-                    </li>
-                </ul>
-            </li>
-
-            <li class="work__item">
-                <div class="work__wrap">
-                    <picture class="picture">
-                        <source
-                                media="(min-width: 600px)"
-                                srcset="../img/work-3-desck.jpg, ../img/work-3-desck@2x.jpg 1.25x"
-                        />
-                        <img class="work__img" src="../img/work-3.jpg" alt="work 2">
-                    </picture>
-                </div>
-                <h3 class="work__item-title">
-                    Ribas hotel group
-                </h3>
-                <ul class="category__list">
-                    <li class="category__item">
-                        <a href="#" class="category__link">brand strategy /</a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity / </a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity / </a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity</a>
-                    </li>
-                </ul>
-            </li>
-
-            <li class="work__item">
-                <div class="work__wrap">
-                    <picture class="picture">
-                        <source
-                                media="(min-width: 600px)"
-                                srcset="../img/work-4-desck.jpg, ../img/work-4-desck@2x.jpg 1.25x"
-                        />
-                        <img class="work__img" src="../img/work-4.jpg" alt="work 4">
-                    </picture>
-                </div>
-                <h3 class="work__item-title">
-                    Akvarel building company
-                </h3>
-                <ul class="category__list">
-                    <li class="category__item">
-                        <a href="#" class="category__link">brand strategy /</a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity / </a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity / </a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity</a>
-                    </li>
-                </ul>
-            </li>
-
-            <li class="work__item">
-                <div class="work__wrap">
-                    <picture class="picture">
-                        <source
-                                media="(min-width: 600px)"
-                                srcset="../img/work-5-desck.jpg, ../img/work-5-desck@2x.jpg 1.25x"
-                        />
-                        <img class="work__img" src="../img/work-5.jpg" alt="work 5">
-                    </picture>
-                </div>
-                <h3 class="work__item-title">
-                    Ribas hotel group
-                </h3>
-                <ul class="category__list">
-                    <li class="category__item">
-                        <a href="#" class="category__link">brand strategy /</a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity / </a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity / </a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity</a>
-                    </li>
-                </ul>
-            </li>
-
-            <li class="work__item">
-                <div class="work__wrap">
-                    <picture class="picture">
-                        <source
-                                media="(min-width: 600px)"
-                                srcset="../img/work-5-desck.jpg, ../img/work-5-desck@2x.jpg 1.25x"
-                        />
-                        <img class="work__img" src="../img/work-5.jpg" alt="work 5">
-                    </picture>
-                </div>
-                <h3 class="work__item-title">
-                    Ribas hotel group
-                </h3>
-                <ul class="category__list">
-                    <li class="category__item">
-                        <a href="#" class="category__link">brand strategy /</a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity / </a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity / </a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity</a>
-                    </li>
-                </ul>
-            </li>
-
-            <li class="work__item">
-                <div class="work__wrap">
-                    <picture class="picture">
-                        <source
-                                media="(min-width: 600px)"
-                                srcset="../img/work-6-desck.jpg, ../img/work-6-desck@2x.jpg 1.25x"
-                        />
-                        <img class="work__img" src="../img/work-6.jpg" alt="work 6">
-                    </picture>
-                </div>
-                <h3 class="work__item-title">
-                    Akvarel building company
-                </h3>
-                <ul class="category__list">
-                    <li class="category__item">
-                        <a href="#" class="category__link">brand strategy /</a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity / </a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity / </a>
-                    </li>
-                    <li class="category__item">
-                        <a href="#" class="category__link"> brand identity</a>
-                    </li>
-                </ul>
-            </li>
-        </ul>
-        <button class="btn btn__see">See all cases</button>
+        <button class="btn btn__see btn--hide">See all cases</button>
     </div>
 </section>
