--- a/app/work.html
+++ b/app/work.html
@@ -4,7 +4,7 @@
 <body>
 @@include('blocks/_header.html')
 <main class="main">
-    @@include('blocks/_work.html')
+    @@include('blocks/_work-page.html')
 </main>
 @@include('blocks/_footer.html')
 
