--- a/app/about.html
+++ b/app/about.html
@@ -2,12 +2,11 @@
 <html lang="en">
 @@include('blocks/_head.html')
 <body>
-@@include('blocks/_header-work.html')
+@@include('blocks/_header-about.html')
 <main class="main">
-    @@include('blocks/_work-page.html')
+    @@include('blocks/_about.html')
 </main>
-@@include('blocks/_footer-work.html')
-
+@@include('blocks/_footer-about.html')
 <script src="./js/script.js"></script>
 </body>
 </html>
