--- a/app/blocks/_footer-about.html
+++ b/app/blocks/_footer-about.html
@@ -16,13 +16,13 @@
         <nav class="navigation navigation--footer">
             <ul class="navigation__list navigation__list--footer">
                 <li class="navigation__item navigation__item--footer">
-                    <a href="#" class="navigation__link navigation__link--footer">Work</a>
+                    <a href="../work.html" class="navigation__link navigation__link--footer ">Work</a>
                 </li>
                 <li class="navigation__item navigation__item--footer">
-                    <a href="#" class="navigation__link navigation__link--footer">About</a>
+                    <a href="../about.html" class="navigation__link navigation__link--footer navigation__link--active">About</a>
                 </li>
                 <li class="navigation__item navigation__item--footer">
-                    <a href="#" class="navigation__link navigation__link--footer">Contact</a>
+                    <a href="../contact.html" class="navigation__link navigation__link--footer">Contact</a>
                 </li>
 
             </ul>
