--- a/app/project.html
+++ b/app/project.html
@@ -4,10 +4,9 @@
 <body>
 @@include('blocks/_header-work.html')
 <main class="main">
-    @@include('blocks/_work-page.html')
+   @@include('blocks/_project.html')
 </main>
 @@include('blocks/_footer-work.html')
-
 <script src="./js/script.js"></script>
 </body>
 </html>
