--- a/app/blocks/_header-about.html
+++ b/app/blocks/_header-about.html
@@ -6,10 +6,10 @@
         <nav class="navigation">
             <ul class="navigation__list">
                 <li class="navigation__item">
-                    <a href="../work.html" class="navigation__link">Work</a>
+                    <a href="../work.html" class="navigation__link ">Work</a>
                 </li>
                 <li class="navigation__item">
-                    <a href="../about.html" class="navigation__link">About</a>
+                    <a href="../about.html" class="navigation__link navigation__link--active">About</a>
                 </li>
                 <li class="navigation__item">
                     <a href="../contact.html" class="navigation__link">Contact</a>
