--- a/app/blocks/_header-contact.html
+++ b/app/blocks/_header-contact.html
@@ -6,13 +6,13 @@
         <nav class="navigation">
             <ul class="navigation__list">
                 <li class="navigation__item">
-                    <a href="../work.html" class="navigation__link">Work</a>
+                    <a href="../work.html" class="navigation__link ">Work</a>
                 </li>
                 <li class="navigation__item">
                     <a href="../about.html" class="navigation__link">About</a>
                 </li>
                 <li class="navigation__item">
-                    <a href="../contact.html" class="navigation__link">Contact</a>
+                    <a href="../contact.html" class="navigation__link navigation__link--active">Contact</a>
                 </li>
 
             </ul>
