--- a/app/blocks/_header-work.html
+++ b/app/blocks/_header-work.html
@@ -6,7 +6,7 @@
         <nav class="navigation">
             <ul class="navigation__list">
                 <li class="navigation__item">
-                    <a href="../work.html" class="navigation__link">Work</a>
+                    <a href="../work.html" class="navigation__link navigation__link--active">Work</a>
                 </li>
                 <li class="navigation__item">
                     <a href="../about.html" class="navigation__link">About</a>
