--- a/app/contact.html
+++ b/app/contact.html
@@ -2,12 +2,10 @@
 <html lang="en">
 @@include('blocks/_head.html')
 <body>
-@@include('blocks/_header-work.html')
+@@include('blocks/_header-contact.html')
 <main class="main">
-    @@include('blocks/_work-page.html')
+    @@include('blocks/_contact.html')
 </main>
-@@include('blocks/_footer-work.html')
-
 <script src="./js/script.js"></script>
 </body>
 </html>
