add fixed header

--- a/app/blocks/_start.html
+++ b/app/blocks/_start.html
@@ -1,4 +1,4 @@
-<section class="section start">
+<section class="section start js-main">
         <div class="start__bg start__bg--video start__bg--img">
             <video src="../img/video/video-2.mp4" autoplay muted loop></video>
 <!--            <picture class="picture">-->
