--- a/app/blocks/_about.html
+++ b/app/blocks/_about.html
@@ -1,4 +1,4 @@
-<section class="section about">
+<section class="section about js-main">
     <div class="container">
         <div class="about__info">
             <p class="about__text">Hi! We’re a team
