--- a/app/blocks/_contact.html
+++ b/app/blocks/_contact.html
@@ -1,4 +1,4 @@
-<section class="section contact">
+<section class="section contact js-main">
     <div class="container">
         <div class="contact__wrapper">
             <h1 class="contact__title">Contact us</h1>
