--- a/app/blocks/_work-page.html
+++ b/app/blocks/_work-page.html
@@ -1,4 +1,4 @@
-<section class="section work">
+<section class="section work js-main">
     <div class="container">
         <ul class="tabs__list">
             <li class="tabs__item">Brand design</li>
