--- a/app/blocks/_work.html
+++ b/app/blocks/_work.html
@@ -176,6 +176,6 @@
                 </ul>
             </li>
         </ul>
-        <button class="btn btn__see btn--hide">See all cases</button>
+        <button class="btn btn__see">See all cases</button>
     </div>
 </section>
