--- a/app/blocks/_about.html
+++ b/app/blocks/_about.html
@@ -1,20 +1,46 @@
 <section class="section about js-main">
     <div class="container">
         <div class="about__info">
-            <p class="about__text">Hi! We’re a team
+            <p>Hi! We’re a team
                 of creatives from Ukraine developing brand concepts, corporate identity
                 and digital design. </p>
 
-            <p class="about__text">“Spiv” in Ukrainian means “Singing”.
+            <p>“Spiv” in Ukrainian means “Singing”.
                 We create Design
                 that sings.</p>
 
-            <p class="about__text">Also “Spiv”
+            <p>Also “Spiv”
                 is Ukrainian is a part of word
                 for “Cooperation”.
                 We gather relevant professionals
                 to create projects
                 that matter!</p>
+
+            <ul>
+                <li>“Spiv” in Ukrainian means “Singing”.
+                    We create Design
+                    that sings.</li>
+            </ul>
+            <ol>
+                <li>“Spiv” in Ukrainian means “Singing”.
+                    We create Design
+                    that sings.</li>
+            </ol>
+            <h2>“Spiv” in Ukrainian means “Singing”.
+                We create Design
+                that sings.</h2>
+            <h3>“Spiv” in Ukrainian means “Singing”.
+                We create Design
+                that sings.</h3>
+            <h4>“Spiv” in Ukrainian means “Singing”.
+                We create Design
+                that sings.</h4>
+            <h5>“Spiv” in Ukrainian means “Singing”.
+                We create Design
+                that sings.</h5>
+            <h6>“Spiv” in Ukrainian means “Singing”.
+                We create Design
+                that sings.</h6>
         </div>
 
         <div class="about__content">
