--- a/app/blocks/_connection.html
+++ b/app/blocks/_connection.html
@@ -1,10 +1,3 @@
-<section class="section connection">
-    <div class="container">
-        <div class="connection__wrapper">
-            <h2 class="connection__title">
-                Want to work with us?
-            </h2>
-            <button class="btn btn__connection">Send request</button>
-        </div>
-    </div>
-</section>
+<!--<section class="section connection">-->
+
+<!--</section>-->
