--- a/app/blocks/_footer-work.html
+++ b/app/blocks/_footer-work.html
@@ -1,4 +1,13 @@
 <footer class="footer">
+    <div class="container connection__container">
+        <div class="connection__wrapper">
+            <h2 class="connection__title">
+                Want to work with us?
+            </h2>
+            <a href="#" class="connection__link">Send request</a>
+        </div>
+    </div>
+
     <div class="container footer__container">
         <div class="footer__wrapper">
             <a href="#" class="footer__logo logo">
