поправил стили для странице contact, добавил модификаторы(отсутпы) для страницы work и убрал кнопку

--- a/app/blocks/_work-page.html
+++ b/app/blocks/_work-page.html
@@ -1,11 +1,11 @@
-<section class="section work js-main">
+<section class="section work js-main work--mod">
     <div class="container">
         <ul class="tabs__list">
             <li class="tabs__item">Brand design</li>
             <li class="tabs__item">Digital design</li>
         </ul>
 
-        <ul class="work__list">
+        <ul class="work__list work__list--mod">
             <li class="work__item">
                 <a href="#" class="work__link">
                     <div class="work__wrap">
@@ -117,7 +117,7 @@
                 </a>
             </li>
         </ul>
-        <ul class="work__list">
+        <ul class="work__list work__list--mod">
             <li class="work__item">
                 <a href="#" class="work__link">
 
@@ -228,6 +228,5 @@
                 </a>
             </li>
         </ul>
-        <a href="#" class="work__see">See all cases</a>
     </div>
 </section>
