--- a/app/blocks/_start.html
+++ b/app/blocks/_start.html
@@ -1,5 +1,5 @@
 <section class="section start js-main">
-        <div class="start__bg start__bg--video start__bg--img">
+        <div class="start__bg">
             <video src="../img/video/video-2.mp4" autoplay muted loop></video>
 <!--            <picture class="picture">-->
 <!--                <source-->
@@ -9,9 +9,9 @@
 <!--                <img src="../img/start-bg.jpg" alt="start bg">-->
 <!--            </picture>-->
         </div>
-    <div class="container">
+    <div class="container start__container">
         <h1 class="start__title">
-            ТУТ БУДЕ ВІДЕО
+            ТУТ <br> БУДЕ <br> ВІДЕО
         </h1>
     </div>
 </section>
