страница about добавил стили и обверну картинки в div

--- a/app/blocks/_about.html
+++ b/app/blocks/_about.html
@@ -19,12 +19,14 @@
             <ul>
                 <li>“Spiv” in Ukrainian means “Singing”.
                     We create Design
-                    that sings.</li>
+                    that sings.
+                </li>
             </ul>
             <ol>
                 <li>“Spiv” in Ukrainian means “Singing”.
                     We create Design
-                    that sings.</li>
+                    that sings.
+                </li>
             </ol>
             <h2>“Spiv” in Ukrainian means “Singing”.
                 We create Design
@@ -46,24 +48,27 @@
         <div class="about__content">
             <ul class="about__list">
                 <li class="about__item">
-                    <img class="about__img" src="../img/work-3.jpg" alt="about 1">
-
+                    <div class="about__img">
+                        <img src="../img/work-3.jpg" alt="about 1">
+                    </div>
                     <p class="about__name">Serge Yamroz
                     </p>
                     <p class="about__prof">Brand Spiv-Strategist</p>
                 </li>
 
                 <li class="about__item">
-                    <img class="about__img" src="../img/work-4.jpg" alt="about 2">
-
+                    <div class="about__img">
+                        <img src="../img/work-4.jpg" alt="about 2">
+                    </div>
                     <p class="about__name">Dima Erlikh
                     </p>
                     <p class="about__prof"> Art Spiv-Director</p>
                 </li>
 
                 <li class="about__item">
-                    <img class="about__img" src="../img/work-3.jpg" alt="about 3">
-
+                    <div class="about__img">
+                        <img src="../img/work-3.jpg" alt="about 3">
+                    </div>
                     <p class="about__name">Sasha Iliiashenko
                     </p>
                     <p class="about__prof">Project Spiv-Manager</p>
