добавил везде модификторы для work категорий

--- a/app/blocks/_work-page.html
+++ b/app/blocks/_work-page.html
@@ -16,11 +16,13 @@
                             />
                             <img class="work__img" src="../img/work-1.jpg" alt="work 1">
                         </picture>
+                        <p class="work__category work__category--desktop">brand strategy/brand identity/brand identity/brand identity</p>
+
                     </div>
                     <h3 class="work__item-title">
                         Ribas hotel group
                     </h3>
-                    <p class="work__category">brand strategy/brand identity/brand identity/brand identity</p>
+                    <p class="work__category work__category--mobile">brand strategy/brand identity/brand identity/brand identity</p>
                 </a>
             </li>
 
@@ -34,11 +36,13 @@
                             />
                             <img class="work__img" src="../img/work-2.jpg" alt="work 2">
                         </picture>
+                        <p class="work__category work__category--desktop">brand strategy/brand identity/brand identity/brand identity brand
+
                     </div>
                     <h3 class="work__item-title">
                         Vilki Palki
                     </h3>
-                    <p class="work__category">brand strategy/brand identity/brand identity/brand identity brand
+                    <p class="work__category work__category--mobile">brand strategy/brand identity/brand identity/brand identity brand
                         strategy/brand identity/brand identity/brand identity</p>
                 </a>
             </li>
@@ -53,11 +57,13 @@
                             />
                             <img class="work__img" src="../img/work-3.jpg" alt="work 2">
                         </picture>
+                        <p class="work__category work__category--desktop">brand strategy/brand identity/brand identity/brand identity</p>
+
                     </div>
                     <h3 class="work__item-title">
                         Ribas hotel group
                     </h3>
-                    <p class="work__category">brand strategy/brand identity/brand identity/brand identity</p>
+                    <p class="work__category work__category--mobile">brand strategy/brand identity/brand identity/brand identity</p>
                 </a>
             </li>
 
@@ -71,11 +77,13 @@
                             />
                             <img class="work__img" src="../img/work-4.jpg" alt="work 4">
                         </picture>
+                        <p class="work__category work__category--desktop">brand strategy / brand identity / brand identity / brand identity</p>
+
                     </div>
                     <h3 class="work__item-title">
                         Akvarel building company
                     </h3>
-                    <p class="work__category">brand strategy / brand identity / brand identity / brand identity</p>
+                    <p class="work__category work__category--mobile">brand strategy / brand identity / brand identity / brand identity</p>
                 </a>
             </li>
 
@@ -90,11 +98,13 @@
                             />
                             <img class="work__img" src="../img/work-5.jpg" alt="work 5">
                         </picture>
+                        <p class="work__category work__category--desktop">brand strategy / brand identity / brand identity / brand identity</p>
+
                     </div>
                     <h3 class="work__item-title">
                         Ribas hotel group
                     </h3>
-                    <p class="work__category">brand strategy / brand identity / brand identity / brand identity</p>
+                    <p class="work__category work__category--mobile">brand strategy / brand identity / brand identity / brand identity</p>
                 </a>
             </li>
 
@@ -109,11 +119,13 @@
                             />
                             <img class="work__img" src="../img/work-6.jpg" alt="work 6">
                         </picture>
+                        <p class="work__category work__category--desktop">brand strategy / brand identity / brand identity / brand identity</p>
+
                     </div>
                     <h3 class="work__item-title">
                         Akvarel building company
                     </h3>
-                    <p class="work__category">brand strategy / brand identity / brand identity / brand identity</p>
+                    <p class="work__category work__category--mobile">brand strategy / brand identity / brand identity / brand identity</p>
                 </a>
             </li>
         </ul>
@@ -129,11 +141,13 @@
                             />
                             <img class="work__img" src="../img/work-5.jpg" alt="work 5">
                         </picture>
+                        <p class="work__category work__category--desktop">brand strategy / brand identity / brand identity / brand identity</p>
+
                     </div>
                     <h3 class="work__item-title">
                         Ribas hotel group
                     </h3>
-                    <p class="work__category">brand strategy / brand identity / brand identity / brand identity</p>
+                    <p class="work__category work__category--mobile">brand strategy / brand identity / brand identity / brand identity</p>
                 </a>
             </li>
 
@@ -148,11 +162,13 @@
                             />
                             <img class="work__img" src="../img/work-6.jpg" alt="work 6">
                         </picture>
+                        <p class="work__category work__category--desktop">brand strategy / brand identity / brand identity / brand identity</p>
+
                     </div>
                     <h3 class="work__item-title">
                         Akvarel building company
                     </h3>
-                    <p class="work__category">brand strategy / brand identity / brand identity / brand identity</p>
+                    <p class="work__category work__category--mobile">brand strategy / brand identity / brand identity / brand identity</p>
                 </a>
             </li>
             <li class="work__item">
@@ -165,11 +181,13 @@
                             />
                             <img class="work__img" src="../img/work-1.jpg" alt="work 1">
                         </picture>
+                        <p class="work__category work__category--desktop">brand strategy/brand identity/brand identity/brand identity</p>
+
                     </div>
                     <h3 class="work__item-title">
                         Ribas hotel group
                     </h3>
-                    <p class="work__category">brand strategy/brand identity/brand identity/brand identity</p>
+                    <p class="work__category work__category--mobile">brand strategy/brand identity/brand identity/brand identity</p>
                 </a>
             </li>
 
@@ -183,11 +201,13 @@
                             />
                             <img class="work__img" src="../img/work-2.jpg" alt="work 2">
                         </picture>
+                        <p class="work__category work__category--desktop">brand strategy/brand identity/brand identity/brand identity brand
+                            strategy/brand identity/brand identity/brand identity</p>
                     </div>
                     <h3 class="work__item-title">
                         Vilki Palki
                     </h3>
-                    <p class="work__category">brand strategy/brand identity/brand identity/brand identity brand
+                    <p class="work__category work__category--mobile">brand strategy/brand identity/brand identity/brand identity brand
                         strategy/brand identity/brand identity/brand identity</p>
                 </a>
             </li>
@@ -202,11 +222,13 @@
                             />
                             <img class="work__img" src="../img/work-3.jpg" alt="work 2">
                         </picture>
+                        <p class="work__category work__category--desktop">brand strategy/brand identity/brand identity/brand identity</p>
+
                     </div>
                     <h3 class="work__item-title">
                         Ribas hotel group
                     </h3>
-                    <p class="work__category">brand strategy/brand identity/brand identity/brand identity</p>
+                    <p class="work__category work__category--mobile">brand strategy/brand identity/brand identity/brand identity</p>
                 </a>
             </li>
 
@@ -220,11 +242,13 @@
                             />
                             <img class="work__img" src="../img/work-4.jpg" alt="work 4">
                         </picture>
+                        <p class="work__category work__category--desktop">brand strategy / brand identity / brand identity / brand identity</p>
+
                     </div>
                     <h3 class="work__item-title">
                         Akvarel building company
                     </h3>
-                    <p class="work__category">brand strategy / brand identity / brand identity / brand identity</p>
+                    <p class="work__category work__category--mobile">brand strategy / brand identity / brand identity / brand identity</p>
                 </a>
             </li>
         </ul>
