video mobile test-1

--- a/app/blocks/_start.html
+++ b/app/blocks/_start.html
@@ -1,6 +1,8 @@
 <section class="section start js-main">
         <div class="start__bg">
-            <video src="../img/video/video-2.mp4" autoplay muted loop></video>
+            <video  autoplay="autoplay" muted loop controls playsinline webkit-playinginline>
+                <source src="../img/video/video-2.mp4">
+            </video>
 <!--            <picture class="picture">-->
 <!--                <source-->
 <!--                        media="(min-width: 600px)"-->
