--- a/app/contact.html
+++ b/app/contact.html
@@ -5,6 +5,8 @@
 @@include('blocks/_header-contact.html')
 <main class="main">
     @@include('blocks/_contact.html')
+
+    @@include('blocks/_footer-contact.html')
 </main>
 <script src="./js/script.js"></script>
 </body>
