video mobile test-2

--- a/app/blocks/_start.html
+++ b/app/blocks/_start.html
@@ -1,6 +1,6 @@
 <section class="section start js-main">
         <div class="start__bg">
-            <video  autoplay="autoplay" muted loop controls playsinline webkit-playinginline>
+            <video  autoplay="autoplay" muted loop playsinline webkit-playinginline>
                 <source src="../img/video/video-2.mp4">
             </video>
 <!--            <picture class="picture">-->
