--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     @@include('blocks/_work.html')
   </main>
   @@include('blocks/_footer.html')
+    <script src="./js/canvas-video-player.js"></script>
   <script src="./js/script.js"></script>
   </body>
 </html>
