video mobile test-8

--- a/app/blocks/_start.html
+++ b/app/blocks/_start.html
@@ -1,6 +1,6 @@
 <section class="section start js-main">
         <div class="start__bg">
-            <video width="597" height="336" autoplay="autoplay" webkit-playsinline muted loop playsinline >
+            <video  autoplay="autoplay" webkit-playsinline muted loop playsinline >
                 <source src="../img/video/video-2.mp4">
             </video>
             <canvas class="canvas"></canvas>
